feat: add ordering page with product selection and validation
- Implemented a new ordering page with product listing and order management.
- Added styles for the ordering interface.
- Integrated product fetching from the API and order validation functionality.
- Included error handling for product fetching and order validation.
- Added clear order functionality and dynamic quantity updates for selected products.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.22.0",
     "better-sqlite3": "^12.4.6",
     "drizzle-orm": "^0.44.7",
+    "express": "^5.1.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
